--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/redux": "^3.6.0",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
+    "flag-icons": "^7.1.0",
     "formik": "^2.4.5",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
